--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/vuelidate": "^0.7.18",
     "eslint": "^8.45.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "3.6.2",
+    "nuxt": "^3.7.0",
     "primeflex": "3.3.1",
     "primeicons": "6.0.1",
     "primevue": "3.30.2",
