--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,20 @@
 {
   // https://v3.nuxtjs.org/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    // ... other options ...
+    "typeRoots": [
+      "node_modules/@types",
+      "gotrue-js/src/lib"
+    ],
+    "types": [
+      "node"
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
+  }
 }
