--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.11",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "sass": "^1.64.1",
@@ -22,15 +21,19 @@
     "@nuxt/devtools": "^0.7.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^0.3.8",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia/nuxt": "^0.4.11",
     "@supabase/supabase-js": "^2.32.0",
     "@types/vuelidate": "^0.7.18",
     "eslint": "^8.45.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "^3.7.0",
+    "pinia": "^2.1.6",
     "primeflex": "3.3.1",
     "primeicons": "6.0.1",
     "primevue": "3.30.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vue-tsc": "^1.8.8"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
