--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
+# Nuxt dev/build outputs
 .output
+.data
 .nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
 node_modules
+
+# Logs
+logs
 *.log
-nuxt.d.ts
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
 .env.*
 !.env.example
+
+
+# Specific Folders
+assets/
+components/
+pages/
+plugins/
+store/
