--- a/package.json
+++ b/package.json
@@ -13,25 +13,35 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
+    "remove": "^0.1.5",
     "sass": "^1.64.1",
     "type-fest": "^4.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.8",
     "@nuxt/devtools": "^0.7.1",
+    "@nuxt/kit": "^3.7.3",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/supabase": "^0.3.8",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@supabase/supabase-js": "^2.32.0",
+    "@types/prismjs": "^1.26.0",
+    "@types/serialize-javascript": "^5.0.2",
     "@types/vuelidate": "^0.7.18",
+    "@vue-macros/nuxt": "^1.8.1",
+    "@vueuse/components": "^10.4.1",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.4.1",
+    "chart.js": "^4.4.0",
     "eslint": "^8.45.0",
-    "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "^3.7.0",
+    "nuxt-typed-router": "^3.3.1",
     "pinia": "^2.1.6",
     "primeflex": "3.3.1",
     "primeicons": "6.0.1",
     "primevue": "3.30.2",
+    "prismjs": "^1.29.0",
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.8"
   },
@@ -41,4 +51,5 @@
   "lint-staged": {
     "*": "eslint --fix"
   }
+
 }
