--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.words": [
+    "antfu",
+    "Lato",
+    "nuxtjs",
+    "pinia",
+    "prismjs",
+    "Roboto",
+    "signin"
+  ]
 }
