--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,17 @@
     "prismjs",
     "Roboto",
     "signin"
+  ],
+	"eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "vue",
+    "html",
+    "markdown",
+    "json",
+    "jsonc",
+    "yaml"
   ]
 }
