--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "type-fest": "^4.2.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.43.1",
     "@nuxt/devtools": "^0.7.1",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/kit": "^3.7.3",
@@ -36,6 +37,7 @@
     "@vueuse/nuxt": "^10.4.1",
     "chart.js": "^4.4.0",
     "eslint": "^8.45.0",
+    "lint-staged": "^14.0.1",
     "nuxt": "^3.7.0",
     "nuxt-typed-router": "^3.3.1",
     "pinia": "^2.1.6",
@@ -43,6 +45,7 @@
     "primeicons": "6.0.1",
     "primevue": "3.30.2",
     "prismjs": "^1.29.0",
+    "simple-git-hooks": "^2.9.0",
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.8"
   },
