changing from anfu to prettier. Still working with ESLint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "pinia",
     "prismjs",
     "Roboto",
-    "signin"
+    "signin",
+    "vuelidate",
+    "vueuse"
   ],
 	"eslint.validate": [
     "javascript",
