--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "type-fest": "^4.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.43.1",
-    "@nuxt/devtools": "^0.7.1",
-    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/devtools": "0.8.4",
     "@nuxt/kit": "^3.7.3",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/supabase": "^0.3.8",
+    "@nuxtjs/supabase": "1.1.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@supabase/supabase-js": "^2.32.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
     "@types/prismjs": "^1.26.0",
     "@types/serialize-javascript": "^5.0.2",
     "@types/vuelidate": "^0.7.18",
@@ -37,22 +41,15 @@
     "@vueuse/nuxt": "^10.4.1",
     "chart.js": "^4.4.0",
     "eslint": "^8.45.0",
-    "lint-staged": "^14.0.1",
     "nuxt": "^3.7.0",
     "nuxt-typed-router": "^3.3.1",
     "pinia": "^2.1.6",
     "primeflex": "3.3.1",
     "primeicons": "6.0.1",
-    "primevue": "3.30.2",
+    "primevue": "3.34.1",
     "prismjs": "^1.29.0",
-    "simple-git-hooks": "^2.9.0",
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.8"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
+ 
 }
