--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,11 @@
 {
-  // https://v3.nuxtjs.org/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
-  // "compilerOptions": {
-  //   // ... other options ...
-  //   "typeRoots": [
-  //     "node_modules/@types",
-  //     "gotrue-js/src/lib",
-  //     "types"
-  //   ],
-  //   "types": [
-  //     "node"
-  //   ],
-  //   "baseUrl": "types",
-  //   "paths": {
-  //     "@/*": [
-  //       "src/*"
-  //     ]
-  //   }
-  // }
+  // https://nuxt.com/docs/guide/concepts/typescript
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "strictNullChecks": false,
+    "typeRoots": ["types", "node_modules/@types"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
+  }
 }
