--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "primevue-quickstart-nuxt3",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,25 +14,19 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
-    "remove": "^0.1.5",
     "sass": "^1.64.1",
     "type-fest": "^4.2.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^1.0.0-beta.10",
     "@nuxt/devtools": "0.8.4",
     "@nuxt/kit": "^3.7.3",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/supabase": "1.1.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@supabase/supabase-js": "^2.32.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
     "@types/prismjs": "^1.26.0",
     "@types/serialize-javascript": "^5.0.2",
     "@types/vuelidate": "^0.7.18",
@@ -40,7 +35,7 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "chart.js": "^4.4.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.50.0",
     "nuxt": "^3.7.0",
     "nuxt-typed-router": "^3.3.1",
     "pinia": "^2.1.6",
@@ -51,5 +46,4 @@
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.8"
   }
- 
 }
