--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "strict": true,
-    "strictNullChecks": false,
-    "typeRoots": ["types", "node_modules/@types"],
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
-  }
+  "extends": "./.nuxt/tsconfig.json"
+  // "compilerOptions": {
+  //   "strict": true,
+  //   "strictNullChecks": false,
+  //   "typeRoots": [
+  //     "types",
+  //     "node_modules/@types"
+  //   ],
+  //   "esModuleInterop": true,
+  //   "allowSyntheticDefaultImports": true
+  // }
 }
