--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "primeicons": "6.0.1",
     "primevue": "3.34.1",
     "prismjs": "^1.29.0",
-    "typescript": "^5.1.6",
-    "vue-tsc": "^1.8.8"
+    "typescript": "5.2.2",
+    "vue-tsc": "1.8.13"
   }
 }
