--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.10",
+    "@antfu/eslint-config": "1.0.0-beta.18",
     "@nuxt/devtools": "latest",
     "@nuxtjs/supabase": "^1.1.2",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
